--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 						Studio
 					</a>
 					<address>
-						<ul class="list">
+						<ul class="footer-list list">
 							<li class="footer-list-item">
 								<a href="https://goo.gl/maps/RwVhN2suyWjSkpwK7" target="_blank" rel="noopener nofollow noreferrer" class="footer-link-adr link">г. Киев, пр-т Леси Украинки, 26</a>
 							</li>
@@ -435,7 +435,7 @@
 									<use href="./images/sprite.svg#icon-check"></use>
 								</svg>
 							</span>
-							Соглашаюсь с рассылкой и принимаю
+							Соглашаюсь с рассылкой и принимаю&nbsp
 							<a class="modal-check-linc" href="">Условия договора</a>
 						</label>
 					</div>
