--- a/portfolio.html
+++ b/portfolio.html
@@ -210,7 +210,7 @@
 						Studio
 					</a>
 					<address>
-						<ul class="list">
+						<ul class="footer-list list">
 							<li class="footer-list-item">
 								<a href="https://goo.gl/maps/RwVhN2suyWjSkpwK7" target="_blank" rel="noopener nofollow noreferrer" class="footer-link-adr link">г. Киев, пр-т Леси Украинки, 26</a>
 							</li>
