--- a/portfolio.html
+++ b/portfolio.html
@@ -220,7 +220,7 @@
 					</address>
 				</div>
 				<div class="footer-social">
-					<p class="footer-social-text">присоединяйтесь</p>
+					<p class="footer-social-text">Присоединяйтесь</p>
 					<ul class="footer-list-contacts">
 						<li class="footer-list-contacts-item">
 							<a href="" class="footer-list-link link">
@@ -251,6 +251,18 @@
 							</a>
 						</li>
 					</ul>
+				</div>
+				<div class="footer-mailing">
+					<p class="footer-mailing-text">Подпишитесь на рассылку</p>
+					<form class="footer-mailing-form">
+						<input type="email" name="mail" id="mail" placeholder="E-mail" />
+						<button class="footer-submit-btn button" type="submit">
+							Подписаться
+							<svg class="footer-submit-icon" width="24" height="24">
+								<use href="./images/sprite.svg#icon-send"></use>
+							</svg>
+						</button>
+					</form>
 				</div>
 			</div>
 		</footer>
